--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,7 @@
 :root {
     --q-primary: #abb39c;
     --q-secondary: #CBF779;
+    --q-text:#555E43;
     --q-accent: #AFC487;
     --q-dark: #2A331A;
     --q-positive: #21BA45;
